2011-07-13  Mike Frysinger  <vapier@gentoo.org>

  * data/Makefile.am, data/xilinx/PARTS, data/xilinx/xc95108/STEPPINGS,
    data/xilinx/xc95108/xc95108, data/xilinx/xc95108/xc95108_pc84,
    data/xilinx/xc95108/xc95108_pq100, data/xilinx/xc95108/xc95108_pq160,
    data/xilinx/xc95108/xc95108_tq100: Add data files for Xilinx xc95108
    FPGAs.  Patch by Steve Tell.

2011-07-27  Jie Zhang  <jie.zhang@analog.com>

  * src/bfin/bfin-part-bfin.c (bfin_wait_ready): Set the default wait
    clocks to 3 for gnICE.

2011-07-26  Jie Zhang  <jie.zhang@analog.com>

  * src/tap/cable/ice100.c (ice100b_set_freq): Set cable->frequency.
  * src/bfin/bfin-part-bfin.c (bfin_wait_ready): Set default wait clocks
    for ICE-100B cable.

2011-07-26  Jie Zhang  <jie.zhang@analog.com>

  * src/tap/cable/ice100.c: Indent.

2011-07-26  Jie Zhang  <jie.zhang@analog.com>

  * src/tap/cable_list.h: Remove ezkit_10 and ezkit_20.
  * src/tap/cable/generic_usbconn_list.h: Remove ezkit_10_bf548,
    ezkit_10_bf537, ezkit_20_bf518 and ezkit_20_bf526.
  * src/tap/cable/ice100.c (struct params_t): Remove sel_rawscan_enabled,
    bytewize_scan, combo_tx_mode, wr_buf_addr and r_buf_addr.
    (swap_data_longs_to_bytes, swap_scan_bytes_to_longs): Remove.
    (DSP_KIT_SCAN_DATA): Remove.
    (KIT_10_DEFAULT_SCAN_LEN): Remove.
    (KIT_10_TRIGGER_SCAN_LEN): Remove.
    (KIT_20_DEFAULT_SCAN_LEN): Remove.
    (KIT_20_TRIGGER_SCAN_LEN): Remove.
    (RAW_SCAN_HDR_SZ): Remove.
    (RAW_SCAN_COMBINED_HDR_SZ): Remove.
    (HOST_DO_RAW_SCAN): Remove.
    (HOST_FAST_MODE): Remove.
    (HOST_SC_AUTHENTICATE): Remove.
    (KIT_10_WRITE_ENDPOINT): Remove.
    (KIT_10_READ_ENDPOINT): Remove.
    (KIT_10_USB_WRITE_TIMEOUT): Remove.
    (KIT_10_USB_READ_TIMEOUT): Remove.
    (KIT_10_WRITE_BUFFER_SIZE): Remove.
    (KIT_10_READ_BUFFER_SIZE): Remove.
    (KIT_20_WRITE_ENDPOINT): Remove.
    (KIT_20_READ_ENDPOINT): Remove.
    (KIT_20_USB_WRITE_TIMEOUT): Remove.
    (KIT_20_USB_READ_TIMEOUT): Remove.